[package]
name = "hologrid"
version = "0.1.0"
authors = ["Frederik Semmel <frederiksemmel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = {git = "https://github.com/nannou-org/nannou"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "gridlines"
harness = false
