[package]
name = "conformal-visualizer"
version = "0.1.0"
authors = ["Frederik Semmel <frederiksemmel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "conformal-visualizer"
path = "src/main.rs"

[dependencies]
nannou = {git = "https://github.com/nannou-org/nannou"}
num = "^0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "gridlines"
harness = false
